RESOLVED FIXED219004
REGRESSION (r269744): ASSERTION FAILED: m_hasValidContentHeight in WebCore::Layout::BoxGeometry::contentBoxHeight()
https://bugs.webkit.org/show_bug.cgi?id=219004
Summary REGRESSION (r269744): ASSERTION FAILED: m_hasValidContentHeight in WebCore::L...
Ryan Haddad
Reported 2020-11-16 14:22:03 PST
platform/ios/ios/plugin/youtube-flash-plugin-iframe-no-height-or-width.html is consistently failing an assertion on iOS debug bots: ASSERTION FAILED: m_hasValidContentHeight /Volumes/Data/slave/ios-simulator-14-debug/build/Source/WebCore/layout/layouttree/LayoutBoxGeometry.h(255) : WebCore::LayoutUnit WebCore::Layout::BoxGeometry::contentBoxHeight() const 1 0x11abc0b09 WTFCrash 2 0x1229a7fbb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1253d7208 WebCore::Layout::BoxGeometry::contentBoxHeight() const 4 0x1260c09f5 WebCore::Layout::BoxGeometry::contentBox() const 5 0x125ff2da8 WebCore::Layout::FormattingContext::Quirks::heightValueOfNearestContainingBlockWithFixedHeight(WebCore::Layout::Box const&) 6 0x125ff2840 WebCore::Layout::FormattingContext::Geometry::computedHeightValue(WebCore::Layout::Box const&, WebCore::Layout::FormattingContext::Geometry::HeightType, WTF::Optional<WebCore::LayoutUnit>) const 7 0x125ff05cb WebCore::Layout::FormattingContext::Geometry::computedMaxHeight(WebCore::Layout::Box const&, WTF::Optional<WebCore::LayoutUnit>) const 8 0x126056c48 WebCore::Layout::InlineFormattingContext::computeHeightAndMargin(WebCore::Layout::Box const&, WebCore::Layout::HorizontalConstraints const&) 9 0x1260563d8 WebCore::Layout::InlineFormattingContext::layoutInFlowContent(WebCore::Layout::InvalidationState&, WebCore::Layout::FormattingContext::ConstraintsForInFlowContent const&) 10 0x12608cac6 WebCore::LayoutIntegration::LineLayout::layout() 11 0x126c74a6b WebCore::RenderBlockFlow::layoutModernLines(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 12 0x126c72108 WebCore::RenderBlockFlow::layoutInlineChildren(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 13 0x126c711b9 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 14 0x126c53e09 WebCore::RenderBlock::layout() 15 0x126c73e32 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 16 0x126c723f4 WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) 17 0x126c711d6 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 18 0x126c53e09 WebCore::RenderBlock::layout() 19 0x126b9859c WebCore::RenderElement::layoutIfNeeded() 20 0x126b97d97 WebCore::ComplexLineLayout::layoutLineBoxes(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 21 0x126c7217e WebCore::RenderBlockFlow::layoutInlineChildren(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 22 0x126c711b9 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 23 0x126c53e09 WebCore::RenderBlock::layout() 24 0x126c73e32 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 25 0x126c723f4 WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) 26 0x126c711d6 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 27 0x126c53e09 WebCore::RenderBlock::layout() 28 0x126c73e32 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 29 0x126c723f4 WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) 30 0x126c711d6 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 31 0x126c53e09 WebCore::RenderBlock::layout() LEAK: 1 WebPageProxy https://results.webkit.org/?suite=layout-tests&test=platform%2Fios%2Fios%2Fplugin%2Fyoutube-flash-plugin-iframe-no-height-or-width.html
Attachments
crash log (151.96 KB, text/plain)
2020-11-16 14:25 PST, Ryan Haddad
no flags
Patch (2.62 KB, patch)
2020-11-17 14:50 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2020-11-16 14:22:16 PST
Ryan Haddad
Comment 2 2020-11-16 14:23:40 PST
Looks like it could be related to https://trac.webkit.org/changeset/269744/webkit
Ryan Haddad
Comment 3 2020-11-16 14:25:27 PST
Created attachment 414279 [details] crash log
alan
Comment 4 2020-11-17 14:50:26 PST
EWS
Comment 5 2020-11-17 17:31:28 PST
Committed r269938: <https://trac.webkit.org/changeset/269938> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414387 [details].
Note You need to log in before you can comment on or make changes to this bug.