REGRESSION (r269744): ASSERTION FAILED: m_hasValidContentHeight in WebCore::Layout::BoxGeometry::contentBoxHeight() https://bugs.webkit.org/show_bug.cgi?id=219004 <rdar://problem/71459284>

Reviewed by Antti Koivisto.

Unfortunately we have to disable all percentage height/width content until after the integration codepath is fixed.
(in this case, the layout code assumes that percentage height values can always be resolved by climbing up on the
ancestor chain -worst case scenario we find the ICB which always has fixed height value.
However the integration codepath does not set the height on the fake ICB (RenderBlockFlow) even when the flow's height
is fixed and the IFC code can't climb farther up on the tree)

* layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForChild):


Canonical link: https://commits.webkit.org/231688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269938 268f45cc-cd09-0410-ab3c-d52691b4dbfc