Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp
@@ -583,13 +583,11 @@ static OptionSet<AvoidanceReason> canUseForChild(const RenderObject& child, Incl
     auto isSupportedStyle = [] (const auto& style) {
         if (style.verticalAlign() == VerticalAlign::Sub || style.verticalAlign() == VerticalAlign::Super)
             return false;
-        auto& width = style.width();
-        auto& height = style.height();
-        if (width.isPercent() || height.isPercent())
+        if (style.width().isPercent() || style.height().isPercent())
             return false;
-        if (width.isAuto() && (style.minWidth().isPercent() || style.maxWidth().isPercent()))
+        if (style.minWidth().isPercent() || style.maxWidth().isPercent())
             return false;
-        if (height.isAuto() && (style.minHeight().isPercent() || style.maxHeight().isPercent()))
+        if (style.minHeight().isPercent() || style.maxHeight().isPercent())
             return false;
         return true;
     };
